# SDL2-YUV420p-player

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  SDL_YUV420_player.c  SDL_mouse_move.c
